2004-11-27  Nate Nielsen <nielsen@memberwebs.com>

	* plugins/gedit/seahorse-gedit.c: Selecting text in recipients dialog
	no longer causes plugin to forget earlier 'to encrypt' selection
	* plugins/gedit/Makefile.am:
	* plugins/gedit/seahorse-gedit.schemas.in: Enable gedit plugin by default
	* libseahorse/seahorse-key-source.c:
	* libseahorse/seahorse-multi-source.c: Fix double free of GPGME context
	* agent/seahorse-agent/cache.c: Fix unknown key problem (bug# 159629)
	* agent/seahorse-agent-secmem.c: Fix secure mem message
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: Add generic functions for freeing string lists
	* src/seahorse-generate-adv.c: Fix memory leak
	* libseahorse/seahorse-gpgmex-util.c: Added implementation of gpgmex_key_copy_*
	* libseahorse/seahorse-gpgmex-util.c: 
	* libseahorse/seahorse-key.c: Fixed small bugs in remote key functionality
	
2004-11-22  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-gpgmex-util.c: 
	* configure.in: Only define strsep when needed
	* libseahorse/seahorse-pgp-source.c: Fix logic bug in seahorse_pgp_source_stop
	
2004-11-21  Nate Nielsen <nielsen@memberwebs.com>

	* plugins/gedit/seahorse-gedit.c: Bring gedit plugin in sync with 
	prior refactoring changes. 
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-default-key-control.c:
	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-multi-source.h:
	* libseahorse/seahorse-recipients.c:
	* libseahorse/seahorse-recipients-store.c:
	* libseahorse/seahorse-recipients-store.h:
	* libseahorse/seahorse-signatures.c:
	* src/main.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-key-manager-store.h: Refactor key sources and their