@@ -1,3 +1,8 @@
+2004-11-28  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-multi-source.c:
+	* libseahorse/seahorse-multi-source.h: Added seahorse_multi_source_get_primary
+	
 2004-11-27  Nate Nielsen <nielsen@memberwebs.com>
 
 	* plugins/gedit/seahorse-gedit.c: Selecting text in recipients dialog
